--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Snake Game</title>
+    <title>Cobrinha Game</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
 
+    <header class="flexible">
+        <img src="./img/icon.png" alt="Logo Snake" width="70px">
+        <h1 class="title">** Cobrinha Game **</h1>
+        <img src="./img/icon2.png" alt="Logo Snake" width="70px">
+    </header>
+
+    <h2>GAME OVER !!!</h2>
+
     <canvas id="snake" width="512" height="512"></canvas>
+
+    <h2>GAME OVER !!!</h2>
     
+    <footer>
+       <h3 class="classH3"></h3> 
+    </footer>
     <script defer src="./js/script.js"></script>
 </body>
 </html>
