--- a/index.html
+++ b/index.html
@@ -13,15 +13,12 @@
         <img src="./img/icon2.png" alt="Logo Snake" width="70px">
     </header>
 
-    <h2>GAME OVER !!!</h2>
+    <h2 id="gameOver" style="visibility:hidden;"></h2>
 
     <canvas id="snake" width="512" height="512"></canvas>
 
-    <h2>GAME OVER !!!</h2>
+    <h2 id="gameOver2" style="visibility:hidden;"></h2>
     
-    <footer>
-       <h3 class="classH3"></h3> 
-    </footer>
     <script defer src="./js/script.js"></script>
 </body>
 </html>
